commit saving buy to database and make a simple payment program

--- a/Program_UAS_AHMAD/FmMenuUtama.resx
+++ b/Program_UAS_AHMAD/FmMenuUtama.resx
@@ -721,9 +721,6 @@
         eb+8RV4pB0j67/n0u/gdhXfCA3pv6mH/H7RMwh8ukvOIAAAAAElFTkSuQmCC
 </value>
   </data>
-  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
   <data name="btsearch.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAACiRJREFUaEPV
@@ -798,4 +795,7 @@
         e1vybQaROZbnaY+8/fG0HrR1qELxL2js+ETwPX19AAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
